# esp32-smartdisplay-demo

./: platformio.ini
include/: lv_conf.h
lib/Firebase Handler/: firebase_handler.cpp  firebase_handler.h  secrets.h
lib/LVGL LittleFS/: lvglDriver.cpp  lvglDriver.h
spotify_functions/functions/: index.js  package-lock.json  package.json
spotify_functions/y/: index.html  spotify-callback.html
src/: main.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_albumScreen.c  ui_albumScreen.h  ui_comp_hook.c  ui_events.c  ui_events.h  ui_font_Inter28Medium.c  ui_font_Inter30Medium.c  ui_font_inter16.c  ui_font_inter162.c  ui_helpers.c  ui_helpers.h  ui_img_1559207837.c  ui_img_albums_png.c  ui_img_artist_png.c  ui_img_home_png.c  ui_img_library_png.c  ui_img_pause_png.c  ui_img_playing_png.c  ui_img_playlist_png.c  ui_img_settings_png.c  ui_songScreen.c  ui_songScreen.h
